--- a/.github/workflows/scala-steward.yml
+++ b/.github/workflows/scala-steward.yml
@@ -14,4 +14,6 @@ jobs:
         uses: scala-steward-org/scala-steward-action@v2
         with:
           github-token: ${{ secrets.SCALA_STEWARD_GH_TOKEN }}
+          author-email: git@nil.choron.cc
+          author-name: niladic
           github-repository: niladic/aplus
